--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 
 plugins:
   - jekyll-remote-theme
+
+
+github:
+  is_project_page: false
+  is_user_page: false
